feat: support for ! operators [DHIS2-16459] (#16354)
* feat: support for ! operators [DHIS2-16459]

* feat: support for ! operators [DHIS2-16459]